fixed signature issues on mobile

--- a/components/newsletter/Newsletter.css
+++ b/components/newsletter/Newsletter.css
@@ -178,4 +178,7 @@ form {
     .Newsletter p{
         font-size: 16px;
     }
+    .desktop-only{
+        display: none !important;
+    }
 }
